ci: update to use branch name instead main
Signed-off-by: Niclas Wesemann <niclas.wesemann@motius.de>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,7 +94,7 @@ jobs:
       - name: push changes
         if: steps.version.outputs.bump != 'none'
         run: |
-          git push origin main --tags
+          git push origin ${{ github.ref_name }} --tags
 
       - name: create release
         if: steps.version.outputs.bump != 'none'
