refactor: Update sidebar rendering and adjust weight values for navigation buttons
Signed-off-by: Orhun Ucak <orhunucak@gmail.com>

--- a/docs-gen/config/_default/hugo.toml
+++ b/docs-gen/config/_default/hugo.toml
@@ -11,6 +11,11 @@ enableEmoji = true
 enableGitInfo = false
 enableRobotsTXT = true
 languageCode = "en-us"
+
+[page]
+  nextPrevSortOrder = "asc"
+  nextPrevInSectionSortOrder = "asc"
+
 [pagination]
   pagerSize = 10
 rssLimit = 10
