fix: Update permalink generation for production environment
Signed-off-by: Orhun Ucak <orhunucak@gmail.com>

--- a/docs-gen/config/production/hugo.toml
+++ b/docs-gen/config/production/hugo.toml
@@ -1,5 +1,6 @@
 # Overrides for production environment
-# baseURL will be set by GitHub Actions
+# baseURL will be set by GitHub Actions, but fallback to hardcoded value
+baseURL = "https://giaccomole.github.io/s2dm"
 relativeURLs = false
 canonifyURLs = true
 disableLiveReload = true
