--- a/docs-gen/config/_default/params.toml
+++ b/docs-gen/config/_default/params.toml
@@ -4,7 +4,7 @@ description = "S2DM - Signal to Data Model documentation"
 images = ["preview.png"]
 
 # mainSections
-mainSections = ["approach-overview", "data-modeling-guideline", "tools", "examples"]
+mainSections = ["approach-overview", "data-modeling-guideline", "tools"]
 # Doks (@hyas/doks-core)
 [doks]
   # Color mode
