--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -47,12 +47,15 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: 'docs-gen/package-lock.json'
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
       - name: Install dependencies
+        working-directory: ./docs-gen
         run: npm ci
       - name: Build production website
+        working-directory: ./docs-gen
         env:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
@@ -66,7 +69,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public
+          path: ./docs-gen/public
 
   # Deployment job
   deploy:
