fix: Update Hugo build command to include production environment and adjust baseURL comment
Signed-off-by: Orhun Ucak <orhunucak@gmail.com>

--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -63,9 +63,10 @@ jobs:
           TZ: America/Los_Angeles
         run: |
           hugo \
+            --environment production \
             --minify \
             --cleanDestinationDir \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL "${{ steps.pages.outputs.base_url }}"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
