--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -66,7 +66,7 @@ jobs:
             --environment production \
             --minify \
             --cleanDestinationDir \
-            --baseURL "${{ steps.pages.outputs.base_url }}"
+            --baseURL "https://giaccomole.github.io/s2dm/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
