--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -31,14 +31,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.147.9
+      HUGO_VERSION: 0.129.0
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
@@ -47,15 +47,12 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: 'docs-gen/package-lock.json'
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
       - name: Install dependencies
-        working-directory: ./docs-gen
         run: npm ci
       - name: Build production website
-        working-directory: ./docs-gen
         env:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
@@ -63,14 +60,13 @@ jobs:
           TZ: America/Los_Angeles
         run: |
           hugo \
-            --environment production \
             --minify \
             --cleanDestinationDir \
-            --baseURL "https://giaccomole.github.io/s2dm/"
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./docs-gen/public
+          path: ./public
 
   # Deployment job
   deploy:
