fix: update workflow baseURL
Signed-off-by: Orhun Ucak <orhunucak@gmail.com>

--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -66,9 +66,9 @@ jobs:
             --environment production \
             --minify \
             --cleanDestinationDir \
-            --baseURL "https://giaccomole.github.io/s2dm/"
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: ./docs-gen/public
 
