refactor(graphql-inspector): add local dependencies and decorator pattern
- Add package.json for local Node.js dependency management
- Add @requires_graphql_inspector decorator for dependency injection
- Add locate_graphql_inspector() to find node_modules automatically
- Resolve CLI path once during initialization for performance
- Improve dependency checking with runtime verification
- Update CI/Actions to use npm install instead of global install
- Update documentation in CONTRIBUTING.md and tools/README.md

Replaces global npm install with local package.json management.
The decorator pattern auto-injects inspector_path to CLI commands,
eliminating repeated lookups and global state.

Signed-off-by: Mustafa Kaptan <mustafa.kaptan@motius.de>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,11 @@ jobs:
         with:
           node-version: "20"
 
+      - name: install node dependencies
+        run: npm install
+
       - name: uv
         uses: astral-sh/setup-uv@v7
-
-      - name: npm install gql-inspector
-        run: npm i --global @graphql-inspector/cli graphql
 
       - name: sync
         run: |
