feat(sparql): enable schema traversal via RDF + SPARQL queries
Add SPARQL-based graph traversal for RDF-materialized GraphQL schemas,
enabling declarative querying of schema structure instead of relying
solely on introspection.

- Add `sparql_queries` module with 3 predefined queries:
  fields-outputting-enum, object-types-with-fields, list-type-fields
- Add `s2dm query` CLI command supporting pre-generated RDF files
  and on-the-fly materialization from GraphQL schemas
- Extend `rdf_materializer` with sorted n-triples serialization,
  multi-format output (nt, turtle, json-ld), and format aliases
- Add `print_table` to logger for tabular SPARQL result display
- Update s2dm-publish action to export all RDF formats on release
- Extend CLI and example docs with SPARQL query examples

Closes #77

Signed-off-by: Mustafa Kaptan <mustafa.kaptan@motius.de>

--- a/actions/s2dm-publish/action.yml
+++ b/actions/s2dm-publish/action.yml
@@ -262,7 +262,7 @@ runs:
       working-directory: ${{ inputs.repository-path }}
       shell: bash
       run: |
-        CMD="s2dm generate schema-rdf -s ${{ inputs.spec-path }} -o ${{ github.workspace }}/.artifacts/schema-rdf --namespace '${{ inputs.schema-rdf-namespace }}'"
+        CMD="s2dm generate schema-rdf -s ${{ inputs.spec-path }} -o ${{ github.workspace }}/.artifacts/schema-rdf --namespace '${{ inputs.schema-rdf-namespace }}' --output-formats nt,ttl,jsonld"
         [ -n "${{ inputs.schema-rdf-prefix }}" ] && CMD="$CMD --prefix '${{ inputs.schema-rdf-prefix }}'"
         [ -n "${{ inputs.schema-rdf-language }}" ] && CMD="$CMD --language '${{ inputs.schema-rdf-language }}'"
         eval "$CMD"
